[gd_scene load_steps=8 format=2]

[ext_resource path="res://Scripts/Objects/Interactables/TreasureBox_Area.gd" type="Script" id=1]
[ext_resource path="res://Assets/Present Box/Present Animations SS.png" type="Texture" id=2]
[ext_resource path="res://Objects/Collision/CollidableBox.tscn" type="PackedScene" id=3]
[ext_resource path="res://Scripts/Objects/Interactables/TreasureBox.gd" type="Script" id=4]

[sub_resource type="Animation" id=1]
length = 0.001
tracks/0/type = "value"
tracks/0/path = NodePath("CollidableBox:animation_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ 9 ]
}

[sub_resource type="Animation" id=2]
resource_name = "open"
length = 0.3
tracks/0/type = "value"
tracks/0/path = NodePath("CollidableBox:animation_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 9, 10, 11 ]
}

[sub_resource type="Animation" id=3]
resource_name = "opened"
length = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("CollidableBox:animation_frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 11 ]
}

[node name="TreasureBox" type="Node2D"]
script = ExtResource( 4 )

[node name="CollidableBox" parent="." instance=ExtResource( 3 )]
tile_size = Vector2( 62, 32 )
grid_size = Vector2( 1.15, 0.7 )
texture = ExtResource( 2 )
texture_offset = Vector2( -2, 15 )
height = 50.0
preview_collision_box = false
animation_hframes = 9
animation_vframes = 3
animation_frame = 9
always_update = true

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
playback_speed = 0.9
anims/RESET = SubResource( 1 )
anims/open = SubResource( 2 )
anims/opened = SubResource( 3 )

[node name="Area2D" type="Area2D" parent="."]
visible = false
position = Vector2( -19, 62 )
collision_layer = 4
collision_mask = 4
script = ExtResource( 1 )

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Area2D"]
position = Vector2( -4, 3 )
scale = Vector2( 1.24106, 1.17385 )
polygon = PoolVector2Array( -12.8922, -51.9658, -4.83458, -56.2252, 29.0075, -46.0025, 17.7268, -40.0392 )

[connection signal="body_entered" from="Area2D" to="Area2D" method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="Area2D" method="_on_Area2D_body_exited"]
[connection signal="open_box" from="Area2D" to="." method="_on_Area2D_open_box"]
